<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Signup">

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorNegro"
        app:layout_constraintStart_toStartOf="@+id/lblNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/nombre"
        android:textColor="@color/colorNegro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a"
        android:textColor="@color/colorNegro"
        app:layout_constraintStart_toStartOf="@+id/lblEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorNegro"
        android:ems="10"
        android:hint="@string/ingrese_su_nombre"
        android:inputType="textPersonName"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/grisClaro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblNombre"
        app:layout_constraintTop_toBottomOf="@+id/lblNombre" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorNegro"
        android:ems="10"
        android:hint="@string/ingrese_su_contrase_a"
        android:inputType="textPassword"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/grisClaro"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="@+id/lblPassword"
        app:layout_constraintTop_toBottomOf="@+id/lblPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorNegro"
        android:ems="10"
        android:hint="@string/ingrese_su_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/grisClaro"
        app:layout_constraintEnd_toEndOf="@+id/txtNombre"
        app:layout_constraintStart_toStartOf="@+id/lblEmail"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtPassword"
        app:layout_constraintStart_toStartOf="@+id/txtPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>