<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayoutHistorial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <!--app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/dia"
                android:textColor="@color/colorNegro"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mes"
                android:textColor="@color/colorNegro"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/hDia"
                app:layout_constraintStart_toStartOf="@+id/hDia"
                app:layout_constraintTop_toBottomOf="@+id/hDia" />

            <TextView
                android:id="@+id/hAnio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_o"
                android:textColor="@color/colorNegro"
                app:layout_constraintEnd_toEndOf="@+id/hMes"
                app:layout_constraintStart_toStartOf="@+id/hMes"
                app:layout_constraintTop_toBottomOf="@+id/hMes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/altura_m"
                android:textColor="@color/colorNegro"
                app:layout_constraintBottom_toBottomOf="@+id/hDia"
                app:layout_constraintStart_toEndOf="@+id/hDia"
                app:layout_constraintTop_toTopOf="@+id/hDia" />

            <TextView
                android:id="@+id/hPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso_kg"
                android:textColor="@color/colorNegro"
                app:layout_constraintEnd_toEndOf="@+id/hAltura"
                app:layout_constraintStart_toStartOf="@+id/hAltura"
                app:layout_constraintTop_toBottomOf="@+id/hAltura" />

            <TextView
                android:id="@+id/hIMC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imc"
                android:textColor="@color/colorNegro"
                app:layout_constraintEnd_toEndOf="@+id/hPeso"
                app:layout_constraintStart_toStartOf="@+id/hPeso"
                app:layout_constraintTop_toBottomOf="@+id/hPeso" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/categoria"
                android:textColor="@color/colorNegro"
                app:layout_constraintBottom_toTopOf="@+id/hPeso"
                app:layout_constraintStart_toEndOf="@+id/hAltura"
                app:layout_constraintTop_toTopOf="@+id/hAltura" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>