<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorAzulLight"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/colorNegro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLivefitApp" />

    <EditText
        android:id="@+id/txtPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorAzulLight"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/colorNegro"
        app:layout_constraintEnd_toEndOf="@+id/txtAltura"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtAltura"
        app:layout_constraintTop_toBottomOf="@+id/txtAltura" />

    <TextView
        android:id="@+id/txtLivefitApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/livefitapp"
        android:textAllCaps="false"
        android:textColor="@color/colorNegro"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:onClick="calcularIMC"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso" />

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/historial"
        android:onClick="verHistorial"
        app:layout_constraintEnd_toEndOf="@+id/btnCalcular"
        app:layout_constraintStart_toStartOf="@+id/btnCalcular"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <Button
        android:id="@+id/btnRecomendaciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/recomendaciones"
        app:layout_constraintEnd_toEndOf="@+id/btnHistorial"
        app:layout_constraintStart_toStartOf="@+id/btnHistorial"
        app:layout_constraintTop_toBottomOf="@+id/btnHistorial" />

    <TextView
        android:id="@+id/hAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/altura_m"
        android:textColor="@color/colorNegro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtAltura"
        app:layout_constraintEnd_toStartOf="@+id/txtAltura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtAltura" />

    <TextView
        android:id="@+id/hPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso_kg"
        android:textColor="@color/colorNegro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPeso"
        app:layout_constraintStart_toStartOf="@+id/hAltura"
        app:layout_constraintTop_toTopOf="@+id/txtPeso" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/desarrollado_por_braa_company"
        android:textColor="@color/grisClaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="SignOut"
        android:textColor="@color/colorNegro"
        app:layout_constraintBottom_toTopOf="@+id/txtLivefitApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLivefitApp"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>