<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/imagen" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblNom_Rcmdc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/nombre"
                android:textColor="@color/colorNegro"
                android:textSize="@dimen/tamaño_texto_terciario"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblDscrp_Rcmnd"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:autoLink="web"
                android:fontFamily="@font/roboto_light"
                android:text="@string/descripcion"
                android:textColor="@color/colorNegro"
                android:textColorLink="@color/colorAzulLight" />

        </LinearLayout>

        <Button
            android:id="@+id/btnVerRecomendacion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_edit_text"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bordes_redondos"
            android:backgroundTint="@color/colorVerdeLogo"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/ver" />

    </LinearLayout>
<!--
    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorVerdeLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
-->
</androidx.constraintlayout.widget.ConstraintLayout>